temp portfolio added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,6 +180,98 @@ Classes
 	width: 100%;
 }
 
+.effect {
+	position: center;
+	padding: 2em;
+	text-align: center;
+	float: center;
+	background: transparent;
+}
+
+.effect figure {
+	position: center;
+	float: center;
+	background: transparent;
+	text-align: center;
+}
+
+.effect img {
+	margin: 0 auto;
+	overflow: hidden;
+	max-height: 150px;
+	-webkit-transition: opacity 1s, -webkit-transform 1s;
+	transition: opacity 1s, transform 1s;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+.effect figcaption {
+	text-align: left;
+	overflow: hidden;
+}
+
+.effect h2 {
+	position: relative;
+	padding: 0.5em 0;
+}
+
+.effect p {
+	display: inline-block;
+	margin: 0 0 0.25em;
+	padding: 0.4em 1em;
+	background: rgba(0,0,0,0.8);
+	color: #fff;
+	text-transform: none;
+	font-weight: 500;
+	font-size: 75%;
+	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+	transition: opacity 0.35s, transform 0.35s;
+	-webkit-transform: translate3d(-360px,0,0);
+	transform: translate3d(-360px,0,0);
+}
+
+.effect p:first-child {
+	-webkit-transition-delay: 0.15s;
+	transition-delay: 0.15s;
+}
+
+.effect p:nth-of-type(2) {
+	-webkit-transition-delay: 0.1s;
+	transition-delay: 0.1s;
+}
+
+.effect p:nth-of-type(3) {
+	-webkit-transition-delay: 0.05s;
+	transition-delay: 0.05s;
+}
+
+.effect:hover p:first-child {
+	-webkit-transition-delay: 0s;
+	transition-delay: 0s;
+}
+
+.effect:hover p:nth-of-type(2) {
+	-webkit-transition-delay: 0.05s;
+	transition-delay: 0.05s;
+}
+
+.effect:hover p:nth-of-type(3) {
+	-webkit-transition-delay: 0.1s;
+	transition-delay: 0.1s;
+}
+
+.effect:hover img {
+	opacity: 0.4;
+	-webkit-transform: scale3d(1.1,1.1,1);
+	transform: scale3d(1.1,1.1,1);
+}
+
+.effect:hover p {
+	opacity: 1;
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
+}
+
 .icon {
 	filter: grayscale(1);
 	-webkit-filter: grayscale(1);
