--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,12 +102,6 @@ h2 {
 	font: var(--font-header-sm);
 }
 
-small {
-	color: var(--accent-grey);
-	font: var(--font-text);
-	font-size: 12px;
-}
-
 hr {
 	border: 1px solid var(--accent-orange);
 	display: block;
@@ -127,6 +121,12 @@ section {
 	overflow: hidden;
 	padding-top: 20px;
 	width: 100%;
+}
+
+small {
+	color: var(--accent-grey);
+	font: var(--font-text);
+	font-size: 12px;
 }
 
 video {
@@ -433,18 +433,6 @@ Classes
     text-decoration: none;
 }
 
-/* .tooltip::after {
-	background: url(../img/tooltip.svg) no-repeat center center;
-	background-size: 100%;
-	content: '';
-	height: 20px;
-	left: 50%;
-	margin: -2px 0 0 -15px;
-	position: absolute;
-	top: 100%;
-	width: 30px;
-} */
-
 .wrapper {
 	height: 100%;
 	width: 100%;
@@ -469,7 +457,7 @@ IDs
 }
 
 #contact {
-	background: url("../img/contact.gif") no-repeat;
+	/* background: url("../img/contact.gif") no-repeat; */
 	background-size: cover;
 	background-position-y: -130px;
 }
