--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -383,12 +383,12 @@ Classes
 	-o-transition: all .5s ease-in-out;
 }
 
-.numbers {
+/* .numbers {
   font-size: 30px;
   line-height: 40px;
   font-family: digital, arial, verdana;
   color: black;
-}
+} */
 
 .portrait {
 	clip-path: circle(125px at center);
@@ -424,7 +424,7 @@ Classes
 	-o-animation: float 2s ease-in-out infinite;
 }
 
-.stopWatch {
+/* .stopWatch {
   padding: 5px;
   background: linear-gradient(top, #222, #eee);
   border: 7px solid #efefef;
@@ -432,7 +432,7 @@ Classes
   display: inline-block;
   margin: 10px auto;
   box-shadow: inset 0 -2px 10px 1px rgba(0, 0, 0, 0.75), 0 5px 20px -10px rgba(0, 0, 0, 1);
-}
+} */
 
 .social {
 	list-style-type: none;
