--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -383,13 +383,6 @@ Classes
 	-o-transition: all .5s ease-in-out;
 }
 
-/* .numbers {
-  font-size: 30px;
-  line-height: 40px;
-  font-family: digital, arial, verdana;
-  color: black;
-} */
-
 .portrait {
 	clip-path: circle(125px at center);
 	height: 250px;
@@ -402,6 +395,10 @@ Classes
 	height: 100%;
 	padding: var(--padding);
 	width: 100%;
+}
+
+.row.half {
+	height: 175px;
 }
 
 .tooltip {
@@ -423,16 +420,6 @@ Classes
 	-moz-animation: float 2s ease-in-out infinite;
 	-o-animation: float 2s ease-in-out infinite;
 }
-
-/* .stopWatch {
-  padding: 5px;
-  background: linear-gradient(top, #222, #eee);
-  border: 7px solid #efefef;
-  border-radius: 5px;
-  display: inline-block;
-  margin: 10px auto;
-  box-shadow: inset 0 -2px 10px 1px rgba(0, 0, 0, 0.75), 0 5px 20px -10px rgba(0, 0, 0, 1);
-} */
 
 .social {
 	list-style-type: none;
