Updated #About section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,6 +143,10 @@ video {
 Classes
 ==================*/
 
+.aboutHeader:hover #BPCert {
+	display: block;
+}
+
 .col-12,
 .col-10,
 .col-8,
@@ -451,6 +455,15 @@ IDs
 
 #about {
 	padding-top: 5%;
+}
+
+#BPCert {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	display: none;
+	margin-left: 10%;
+	position: absolute;
+	width: 75%;
+	z-index: 1;
 }
 
 #check {
