Headline clean-up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 * Project Name: Minimal Portfolio
 * Version: 1.0
 * Date: 10/02/2017
-* URL: github.com/itsokayitsofficial/itsokayitsofficial.io branch port_min
+* URL: github.com/itsokayitsofficial/itsokayitsofficial.io branch master
 */
 
 
