--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
 html,
 body {
+  background: #fff;
   margin: 0;
   padding: 0;
   font-family: arial !important;
@@ -17,15 +18,18 @@ body {
 
 #canvas {
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
   display: block;
   width: 100%;
-  z-index: -1;
 }
 
 #info {
   margin: 30px;
+}
+
+#name {
+  color: #0f669d;
 }
 
 #logos {
@@ -36,4 +40,10 @@ body {
 
 .logo {
   max-width: 5em;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background: #242424;
+  }
 }
